add dao and db connection

--- a/src/main/resources/com/supercharger/app/clientes/clientes.fxml
+++ b/src/main/resources/com/supercharger/app/clientes/clientes.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -9,41 +10,43 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" fillWidth="false" prefHeight="428.0" prefWidth="565.0" spacing="20.0"
-      xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.supercharger.app.controllers.ClientesController">
+<VBox alignment="CENTER" fillWidth="false" prefHeight="428.0" prefWidth="565.0" spacing="20.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.supercharger.app.controllers.ClientesController">
     <padding>
-        <Insets bottom="40.0" left="40.0" right="40.0" top="40.0"/>
+        <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
     </padding>
     <Label fx:id="title" contentDisplay="CENTER" text="Clientes">
         <VBox.margin>
-            <Insets bottom="10.0"/>
+            <Insets bottom="10.0" />
         </VBox.margin>
         <font>
-            <Font size="20.0"/>
+            <Font size="20.0" />
         </font>
     </Label>
     <HBox prefHeight="16.0" prefWidth="484.0">
         <children>
             <Button fx:id="nuevoButton" onAction="#onNuevoClienteClick" prefWidth="100.0" styleClass="" text="Nuevo Cliente">
                 <HBox.margin>
-                    <Insets left="385.0"/>
+                    <Insets left="385.0" />
                 </HBox.margin>
             </Button>
         </children>
     </HBox>
-    <TableView prefHeight="200.0" prefWidth="518.0">
+    <TableView fx:id="table" prefHeight="200.0" prefWidth="518.0">
         <columns>
-            <TableColumn prefWidth="90.0" text="Nombre"/>
-            <TableColumn prefWidth="90.0" text="Apellido"/>
-            <TableColumn prefWidth="82.0" text="Documento"/>
-            <TableColumn prefWidth="85.0" text="Teléfono"/>
-            <TableColumn prefWidth="137.0" text="Vehiculo"/>
+            <TableColumn fx:id="id" prefWidth="0" text="id" visible="false"/>
+            <TableColumn fx:id="nombre" prefWidth="90.0" text="Nombre" />
+            <TableColumn fx:id="apellido" prefWidth="90.0" text="Apellido" />
+            <TableColumn fx:id="documento" prefWidth="82.0" text="Documento" />
+            <TableColumn fx:id="telefono" prefWidth="85.0" text="Teléfono" />
+            <TableColumn fx:id="vehiculo" prefWidth="137.0" text="Vehiculo" />
         </columns>
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
     </TableView>
     <Button fx:id="volverButton" onAction="#onVolverClick" prefWidth="70.0" styleClass="" text="Volver">
         <VBox.margin>
-            <Insets/>
+            <Insets />
         </VBox.margin>
     </Button>
 </VBox>
