--- a/src/main/resources/com/supercharger/app/main.fxml
+++ b/src/main/resources/com/supercharger/app/main.fxml
@@ -20,7 +20,7 @@
                     <Insets bottom="20.0" />
                 </VBox.margin>
             </Label>
-            <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onTurnosClick" prefWidth="110.0" styleClass="" text="Turnos" />
+            <Button fx:id="turnosButton" alignment="CENTER" contentDisplay="CENTER" onAction="#onTurnosClick" prefWidth="110.0" styleClass="" text="Turnos" />
             <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onClientesClick" prefWidth="110.0" styleClass="" text="Clientes" />
             <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onMecanicosClick" prefWidth="110.0" styleClass="" text="Mecánicos" />
             <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onTrabajosClick" prefWidth="110.0" styleClass="" text="Trabajos Diarios" />
