--- a/src/main/resources/com/supercharger/app/turnos/turnosForm.fxml
+++ b/src/main/resources/com/supercharger/app/turnos/turnosForm.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -27,9 +28,9 @@
     <HBox prefHeight="1.0" prefWidth="485.0">
         <children>
             <Label prefHeight="26.0" prefWidth="70.0" text="Cliente:"/>
-            <TextField promptText="Cliente"/>
-            <Button alignment="TOP_LEFT" onAction="#onSeleccionarClienteClick" prefHeight="26.0" prefWidth="145.0" styleClass=""
-                    text="Seleccionar cliente">
+            <TextField fx:id="cliente" promptText="Cliente"/>
+            <Button fx:id="seleccionarClienteButton" alignment="TOP_LEFT" onAction="#onSeleccionarClienteClick"
+                    prefHeight="26.0" prefWidth="145.0" styleClass="" text="Seleccionar cliente">
                 <HBox.margin>
                     <Insets/>
                 </HBox.margin>
@@ -39,9 +40,9 @@
     <HBox prefHeight="1.0" prefWidth="485.0">
         <children>
             <Label prefHeight="26.0" prefWidth="70.0" text="Mecánico:"/>
-            <TextField promptText="Mecánico"/>
-            <Button alignment="TOP_LEFT" onAction="#onSeleccionarMecanicoClick" prefHeight="26.0" prefWidth="145.0" styleClass=""
-                    text="Seleccionar mecánico">
+            <TextField fx:id="mecanico" promptText="Mecánico"/>
+            <Button fx:id="seleccionarMecanicoButton" alignment="TOP_LEFT" onAction="#onSeleccionarMecanicoClick"
+                    prefHeight="26.0" prefWidth="145.0" styleClass="" text="Seleccionar mecánico">
                 <HBox.margin>
                     <Insets/>
                 </HBox.margin>
@@ -51,7 +52,7 @@
     <HBox prefHeight="1.0" prefWidth="485.0">
         <children>
             <Label prefHeight="26.0" prefWidth="70.0" text="Fecha:"/>
-            <TextField editable="false" promptText="Fecha"/>
+            <TextField fx:id="fecha" editable="false" promptText="Fecha"/>
         </children>
     </HBox>
     <TableView prefHeight="108.0" prefWidth="486.0">
@@ -59,12 +60,14 @@
             <TableColumn prefWidth="242.0" text="Horario"/>
             <TableColumn prefWidth="241.0" text="Disponible"/>
         </columns>
+        <cursor>
+            <Cursor fx:constant="HAND"/>
+        </cursor>
     </TableView>
     <HBox alignment="CENTER" prefHeight="1.0" prefWidth="485.0">
         <children>
             <Button fx:id="volverButton" onAction="#onVolverClick" prefWidth="70.0" styleClass="" text="Volver"/>
-            <Button alignment="CENTER" onAction="#onGuardarClick" prefWidth="70.0" styleClass=""
-                    text="Guardar">
+            <Button alignment="CENTER" onAction="#onGuardarClick" prefWidth="70.0" styleClass="" text="Guardar">
                 <HBox.margin>
                     <Insets left="20.0"/>
                 </HBox.margin>
