--- a/src/main/resources/com/supercharger/app/main.fxml
+++ b/src/main/resources/com/supercharger/app/main.fxml
@@ -20,13 +20,14 @@
                     <Insets bottom="20.0" />
                 </VBox.margin>
             </Label>
-            <Button fx:id="turnosButton" alignment="CENTER" contentDisplay="CENTER" onAction="#onTurnosClick" prefWidth="110.0" styleClass="" text="Turnos" />
+            <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onAgendasClick" prefWidth="110.0" styleClass="" text="Agendas" />
+            <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onTurnosClick" prefWidth="110.0" styleClass="" text="Turnos" />
             <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onClientesClick" prefWidth="110.0" styleClass="" text="Clientes" />
             <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onMecanicosClick" prefWidth="110.0" styleClass="" text="Mecánicos" />
             <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onTrabajosClick" prefWidth="110.0" styleClass="" text="Trabajos Diarios" />
             <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onInformeClick" prefHeight="26.0" prefWidth="110.0" styleClass="" text="Informe Mensual" />
         </VBox>
-        <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onSalirClick" prefWidth="110.0" styleClass="" text="Salir">
+        <Button fx:id="exitButton" alignment="CENTER" contentDisplay="CENTER" onAction="#onSalirClick" prefWidth="110.0" styleClass="" text="Salir">
             <VBox.margin>
                 <Insets bottom="40.0" />
             </VBox.margin>
