--- a/src/main/resources/com/supercharger/app/clientes/clientesForm.fxml
+++ b/src/main/resources/com/supercharger/app/clientes/clientesForm.fxml
@@ -9,63 +9,60 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" fillWidth="false" prefHeight="428.0" prefWidth="565.0" spacing="20.0"
-      xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.supercharger.app.controllers.ClientesController">
+<VBox alignment="CENTER" fillWidth="false" prefHeight="428.0" prefWidth="565.0" spacing="20.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.supercharger.app.controllers.ClientesController">
     <padding>
-        <Insets bottom="40.0" left="40.0" right="40.0" top="40.0"/>
+        <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
     </padding>
     <Label contentDisplay="CENTER" text="Nuevo Cliente">
         <VBox.margin>
-            <Insets bottom="10.0"/>
+            <Insets bottom="10.0" />
         </VBox.margin>
         <font>
-            <Font size="20.0"/>
+            <Font size="20.0" />
         </font>
     </Label>
     <HBox prefHeight="26.0" prefWidth="483.0">
         <children>
-            <Label prefHeight="25.0" prefWidth="100.0" text="Nombre:"/>
-            <TextField fx:id="nomForm" promptText="Nombre"/>
+            <Label prefHeight="25.0" prefWidth="100.0" text="Nombre:" />
+            <TextField fx:id="nomForm" promptText="Nombre" />
         </children>
     </HBox>
     <HBox prefHeight="26.0" prefWidth="483.0">
         <children>
-            <Label prefHeight="25.0" prefWidth="100.0" text="Apellido:"/>
-            <TextField fx:id="apeForm" promptText="Apellido"/>
+            <Label prefHeight="25.0" prefWidth="100.0" text="Apellido:" />
+            <TextField fx:id="apeForm" promptText="Apellido" />
         </children>
     </HBox>
     <HBox prefHeight="26.0" prefWidth="483.0">
         <children>
-            <Label prefHeight="25.0" prefWidth="100.0" text="Tipo Documento:"/>
-            <TextField fx:id="tDocForm" promptText="Tipo Documento "/>
+            <Label prefHeight="25.0" prefWidth="100.0" text="Tipo Documento:" />
+         <ComboBox fx:id="tDocCombo" prefHeight="26.0" prefWidth="160.0" promptText="Seleccionar" />
         </children>
     </HBox>
     <HBox prefHeight="26.0" prefWidth="483.0">
         <children>
-            <Label prefHeight="25.0" prefWidth="100.0" text="Nro Documento:"/>
-            <TextField fx:id="docForm" promptText="Nro Documento"/>
+            <Label prefHeight="25.0" prefWidth="100.0" text="Nro Documento:" />
+            <TextField fx:id="docForm" promptText="Nro Documento" />
         </children>
     </HBox>
     <HBox prefHeight="26.0" prefWidth="483.0">
         <children>
-            <Label prefHeight="25.0" prefWidth="100.0" text="Teléfono:"/>
-            <TextField fx:id="telForm" prefHeight="26.0" prefWidth="160.0" promptText="Teléfono"/>
+            <Label prefHeight="25.0" prefWidth="100.0" text="Teléfono:" />
+            <TextField fx:id="telForm" prefHeight="26.0" prefWidth="160.0" promptText="Teléfono" />
         </children>
     </HBox>
     <HBox prefHeight="1.0" prefWidth="485.0">
         <children>
-            <Label prefHeight="26.0" prefWidth="100.0" text="Vehículo:"/>
-            <ComboBox fx:id="vehCombo" prefHeight="26.0" prefWidth="160.0" promptText="Seleccionar vehículo"/>
+            <Label prefHeight="26.0" prefWidth="100.0" text="Vehículo:" />
+            <ComboBox fx:id="vehCombo" prefHeight="26.0" prefWidth="160.0" promptText="Seleccionar vehículo" />
         </children>
     </HBox>
     <HBox alignment="CENTER" prefHeight="1.0" prefWidth="485.0">
         <children>
-            <Button fx:id="volverButton" onAction="#onVolverClick" prefWidth="70.0" styleClass="" text="Volver"/>
-            <Button alignment="CENTER" onAction="#onGuardarClick" prefWidth="70.0" styleClass=""
-                    text="Guardar">
+            <Button fx:id="volverButton" onAction="#onVolverClick" prefWidth="70.0" styleClass="" text="Volver" />
+            <Button alignment="CENTER" onAction="#onGuardarClick" prefWidth="70.0" styleClass="" text="Guardar">
                 <HBox.margin>
-                    <Insets left="20.0"/>
+                    <Insets left="20.0" />
                 </HBox.margin>
             </Button>
         </children>
