--- a/src/main/resources/com/supercharger/app/mecanicos/mecanicosForm.fxml
+++ b/src/main/resources/com/supercharger/app/mecanicos/mecanicosForm.fxml
@@ -9,22 +9,24 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" fillWidth="false" prefHeight="428.0" prefWidth="565.0" spacing="20.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.supercharger.app.controllers.MecanicosController">
+<VBox alignment="CENTER" fillWidth="false" prefHeight="428.0" prefWidth="565.0" spacing="20.0"
+      xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.supercharger.app.controllers.MecanicosController">
     <padding>
-        <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
+        <Insets bottom="40.0" left="40.0" right="40.0" top="40.0"/>
     </padding>
     <Label contentDisplay="CENTER" text="Nuevo Mecánico">
         <VBox.margin>
-            <Insets bottom="10.0" />
+            <Insets bottom="10.0"/>
         </VBox.margin>
         <font>
-            <Font size="20.0" />
+            <Font size="20.0"/>
         </font>
     </Label>
     <HBox prefHeight="26.0" prefWidth="483.0">
         <children>
-            <Label prefHeight="25.0" prefWidth="95.0" text="Nombre:" />
-            <TextField fx:id="nombreForm" prefHeight="26.0" prefWidth="185.0" promptText="Nombre" />
+            <Label prefHeight="25.0" prefWidth="95.0" text="Nombre:"/>
+            <TextField fx:id="nombreForm" prefHeight="26.0" prefWidth="185.0" promptText="Nombre"/>
         </children>
     </HBox>
     <HBox prefHeight="1.0" prefWidth="485.0">
@@ -35,22 +37,25 @@
     </HBox>
     <HBox prefHeight="26.0" prefWidth="483.0">
         <children>
-            <Label prefHeight="25.0" prefWidth="95.0" text="Horario entrada:" />
-            <TextField fx:id="horarioEntrada" prefHeight="26.0" prefWidth="87.0" promptText="HH:MM" />
+            <Label prefHeight="25.0" prefWidth="95.0" text="Horario entrada:"/>
+            <TextField fx:id="horarioEntrada" prefHeight="26.0" prefWidth="87.0" promptText="HH:MM"/>
         </children>
     </HBox>
-   <HBox prefHeight="26.0" prefWidth="483.0">
-      <children>
-         <Label prefHeight="25.0" prefWidth="95.0" text="Horario salida:" />
-         <TextField fx:id="horarioSalida" prefHeight="26.0" prefWidth="87.0" promptText="HH:MM" />
-      </children>
-   </HBox>
+    <HBox prefHeight="26.0" prefWidth="483.0">
+        <children>
+            <Label prefHeight="25.0" prefWidth="95.0" text="Horario salida:"/>
+            <TextField fx:id="horarioSalida" prefHeight="26.0" prefWidth="87.0" promptText="HH:MM"/>
+        </children>
+    </HBox>
+    <Label fx:id="formOK" prefHeight="52.0" prefWidth="381.0"
+           text="Debe ingresar nombre, especialidad, horario entrada y horario salida!"
+           textFill="#e44a4a" visible="false" wrapText="true"/>
     <HBox alignment="CENTER" prefHeight="1.0" prefWidth="485.0">
         <children>
-            <Button fx:id="volverButton" onAction="#onVolverClick" prefWidth="70.0" styleClass="" text="Volver" />
+            <Button fx:id="volverButton" onAction="#onVolverClick" prefWidth="70.0" styleClass="" text="Volver"/>
             <Button alignment="CENTER" onAction="#onGuardarClick" prefWidth="70.0" styleClass="" text="Guardar">
                 <HBox.margin>
-                    <Insets left="20.0" />
+                    <Insets left="20.0"/>
                 </HBox.margin>
             </Button>
         </children>
